--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "72b80161-3157-4d20-81b3-e90aa1aa28f2"
 authors = ["Sacha Benarroch-Lelong"]
 version = "1.0.0-DEV"
 
+[deps]
+NOMAD = "02130f1c-4665-5b79-af82-ff1385104aa0"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
 [compat]
+NOMAD = "2.4.1"
+Revise = "3.8.0"
 julia = "1.6.7"
 
 [extras]
