--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,25 @@ authors = ["Sacha Benarroch-Lelong"]
 version = "1.0.0-DEV"
 
 [deps]
+CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 NOMAD = "02130f1c-4665-5b79-af82-ff1385104aa0"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
+CUTEst = "1.3.2"
+Ipopt = "1.10.6"
+JSON = "0.21.4"
+LaTeXStrings = "1.4.0"
+LinearAlgebra = "1.11.0"
+NLPModels = "0.21.5"
 NOMAD = "2.4.1"
+Plots = "1.40.13"
 Revise = "3.8.0"
 julia = "1.6.7"
 
