--- a/Project.toml
+++ b/Project.toml
@@ -10,8 +10,11 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
+NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 NOMAD = "02130f1c-4665-5b79-af82-ff1385104aa0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+ResumableFunctions = "c5292f4c-5179-55e1-98c5-05642aab7184"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
@@ -21,8 +24,11 @@ JSON = "0.21.4"
 LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
 NLPModels = "0.21.5"
+NLPModelsIpopt = "0.10.4"
 NOMAD = "2.4.1"
 Plots = "1.40.13"
+ProgressMeter = "1.10.4"
+ResumableFunctions = "1.0.3"
 Revise = "3.8.0"
 julia = "1.6.7"
 
