[algs] fix LHS dependencies

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 NOMAD = "02130f1c-4665-5b79-af82-ff1385104aa0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ResumableFunctions = "c5292f4c-5179-55e1-98c5-05642aab7184"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
@@ -28,6 +29,7 @@ NLPModelsIpopt = "0.10.4"
 NOMAD = "2.4.1"
 Plots = "1.40.13"
 ProgressMeter = "1.10.4"
+Random = "1.11.0"
 ResumableFunctions = "1.0.3"
 Revise = "3.8.0"
 julia = "1.6.7"
